--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
         "lint": "eslint . --fix"
     },
     "devDependencies": {
-        "@eslint/js": "^9.19.0",
+        "@eslint/css": "^0.11.0",
+        "@eslint/js": "^9.34.0",
+        "@eslint/json": "^0.13.2",
         "@tailwindcss/vite": "^4.1.11",
         "@types/node": "^22.13.5",
         "@vitejs/plugin-vue": "^6.0.0",
         "@vue/eslint-config-typescript": "^14.3.0",
         "concurrently": "^9.0.1",
-        "eslint": "^9.17.0",
+        "eslint": "^9.34.0",
         "eslint-config-prettier": "^10.0.1",
-        "eslint-plugin-vue": "^9.32.0",
+        "eslint-plugin-vue": "^9.33.0",
+        "globals": "^16.3.0",
+        "jiti": "^2.5.1",
         "prettier": "^3.4.2",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "typescript": "^5.2.2",
-        "typescript-eslint": "^8.23.0",
+        "typescript-eslint": "^8.42.0",
         "vite": "^7.0.4",
         "vue-tsc": "^2.2.4"
     },
