--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "vue-tsc": "^2.2.4"
     },
     "dependencies": {
+        "@formkit/auto-animate": "^0.9.0",
         "@inertiajs/vue3": "^2.1.0",
         "@unovis/ts": "^1.6.0",
         "@unovis/vue": "^1.6.0",
