feat(dependencies): ajout de laradumps et de laradumps-core dans composer.json, mise à jour de plusieurs dépendances, et ajout de fichiers de configuration pour FilePond dans package.json et package-lock.json.

--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,13 @@
         "laravel-lang/common": "^6.7",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "rahulhaque/laravel-filepond": "12.0",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "laradumps/laradumps": "^4.5",
+        "laradumps/laradumps-core": "^3.2",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.18",
         "laravel/sail": "^1.41",
