--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
         "@vueuse/core": "^12.8.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "filepond": "^4.32.9",
+        "filepond-plugin-file-validate-type": "^1.2.7",
+        "filepond-plugin-image-preview": "^4.6.11",
         "laravel-vite-plugin": "^2.0.0",
         "lucide-vue-next": "^0.468.0",
         "pinia": "^3.0.3",
@@ -48,6 +51,7 @@
         "tailwindcss": "^4.1.1",
         "tw-animate-css": "^1.2.5",
         "vue": "^3.5.13",
+        "vue-filepond": "^7.0.4",
         "ziggy-js": "^2.4.2"
     },
     "optionalDependencies": {
