--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@eslint/css": "^0.11.0",
         "@eslint/js": "^9.34.0",
         "@eslint/json": "^0.13.2",
+        "@laravel/echo-vue": "^2.2.4",
         "@tailwindcss/vite": "^4.1.11",
         "@types/node": "^22.13.5",
         "@vitejs/plugin-vue": "^6.0.0",
@@ -23,9 +24,11 @@
         "eslint-plugin-vue": "^9.33.0",
         "globals": "^16.3.0",
         "jiti": "^2.5.1",
+        "laravel-echo": "^2.2.4",
         "prettier": "^3.4.2",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
+        "pusher-js": "^8.4.0",
         "typescript": "^5.2.2",
         "typescript-eslint": "^8.42.0",
         "vite": "^7.0.4",
